--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,9 @@ body {
 }
 
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-align: center;
     color: #333333;
 }
@@ -47,17 +49,19 @@ h1, h2, h3 {
     color: #cc0000;
 }
 
-.slogan{
+.slogan {
     width: 100%;
 }
 
-.img-ch, .img {
+.img-ch,
+.img {
     width: 80%;
     margin: 0 auto;
     display: block;
 }
 
-.location, .how-to-order {
+.location,
+.how-to-order {
     border: 1px solid #ccc;
     padding: 20px;
     width: 300px;
@@ -67,7 +71,8 @@ h1, h2, h3 {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
-address, .how-to-order p {
+address,
+.how-to-order p {
     margin-top: 10px;
     font-size: 14px;
     color: #555;
@@ -80,4 +85,30 @@ a {
 
 a:hover {
     color: #0056b3;
+}
+
+
+.footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+}
+
+.footer h4 {
+    margin: 0;
+    font-size: 14px;
+}
+
+.footer a {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.footer a:hover {
+    color: #bbb;
+}
+
+.arrow {
+    margin: 0 5px;
 }
