--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
 .container {
     max-width: 800px;
     margin: 0 auto;
+    margin-top: 6.0px;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
