--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 
 .header {
     background-color: #333;
-    padding: 20px 0;
+    padding: 24px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     width: 100%;
@@ -27,7 +27,7 @@ body {
 }
 
 .menu li {
-    margin: 0 70px;
+    margin: 0 80px;
 }
 
 .menu a {
@@ -118,11 +118,18 @@ address,
 
 a {
     text-decoration: none;
-    color: #007bff;
+    color: #3088e6;
 }
 
 a:hover {
     color: #0056b3;
+}
+.fa-map-marker-alt{
+    color: #FF5733; 
+}
+
+.fa-whatsapp {
+    color: #25D366;
 }
 
 
