--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,8 @@ a:hover {
 .arrow {
     margin: 0 5px;
 }
+@media screen and (max-width: 1020px) {
+    .menu li {
+        margin: 0 10px;
+    }
+}
